fixed horizontal scroll

--- a/assets/sass/backbeach.sass
+++ b/assets/sass/backbeach.sass
@@ -10,12 +10,17 @@ $lg: 992px //tablet
 $md: 768px
 $sm: 576px
 
+// html styles
+html
+  overflow-x: hidden
+
 // body styles
 body
   font-family: 'Source Sans Pro', sans-serif
   font-size: 18px
   line-height: 1.25
   height: 8000px
+  overflow-x: hidden
 
 //  Button styles
 .button
